java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddThrowsClauseHint3.pass
package org.netbeans.test.java.hints;

import java.io.IOException;

public class AddThrowsClause3 {
    
    public AddThrowsClause3() {
    }
    
    public void test() throws IOException {
        throw (IOException) new IOException().initCause(null);
    }
}
